<resources>
    <string name="app_name">BabyOnBoard</string>

    <string name="title_invitation">Invitation</string>
    <string name="title_venue">Venue</string>
    <string name="title_baby_on_boarding">Baby On Boarding</string>
    <string name="title_finger_crossed">Girl or Boy</string>
    <string name="dad">Manoj</string>
    <string name="mom">Priya</string>
    <string name="invitation_1">Little man, or little lady? It’s a surprise for us too! Come join us celebrating our newest addition to the family.</string>
    <string name="invitation_2">Twinkle, twinkle little star\nHow we wonder what you are</string>
    <string name="invitation_3">Since we’ve got a Bun in Oven, We’re firing up the grill to celebrate the baby to be with Burgers and Brats\nJoin us as we celebrate.</string>
    <string name="date">ON\n\nWednesday, September 11, 2019\n09:30 AM onwards</string>
    <string name="place">At\n\nTiruppur Sree Annapoorna\n Rayan Kovil Road, Avinashi,\n Tamil Nadu 641663</string>
    <string name="invitation_4">We shall be privileged to have you in one of the most auspicious moments of our life.</string>
    <string name="girl_or_boy">Girl or boy? Either way we will be filled with joy.</string>
    <string name="strGPSMessage">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="ok">OK</string>
    <string name="showOnMap">Show On Map</string>
    <string name="baby_progress">Baby On Board</string>
    <string name="str_share">Share</string>

</resources>
